--- a/views/landingpage.hbs
+++ b/views/landingpage.hbs
@@ -285,6 +285,17 @@
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 600px) {
+  .hero__title {
+    font-size: 26px;
+  }
+  h2
+  {
+    font-size: 25px;
+  }
+  
+}
+
 .hero__description {
   font-size: 18px;
   color: #666;
