--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -8,7 +8,7 @@
   <li><a href="https://www.facebook.com/afsalshaofficial/"><i class="fab fa-facebook-f"></i></a></li>
   <li><a href="https://twitter.com/emailafsalsha"><i class="fab fa-twitter"></i></a></li>
   <li><a href="https://www.instagram.com/afsal.madathingal/"><i class="fab fa-instagram"></i></a></li>
-  <li><a href="https://www.linkedin.com/in/afsalmadathingal/"><i class="fab fa-linkedin-in"></i></a></li>
+  <li><a href="https://www.linkedin.com/company/iluvnet-com"><i class="fab fa-linkedin-in"></i></a></li>
 </ul>
     </div>
     <div class="footer-right">
