--- a/views/downloaderViews/facebookDownloader.hbs
+++ b/views/downloaderViews/facebookDownloader.hbs
@@ -88,3 +88,13 @@
 {{>facebookaccor}}
 {{>footer}}
 <script src="/js/facebookscript.js"></script>
+
+<style>
+  .home
+{
+ background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/images/facebook\ banner.png');
+   
+
+}
+
+</style>
