--- a/views/downloaderViews/tiktokDownloader.hbs
+++ b/views/downloaderViews/tiktokDownloader.hbs
@@ -99,3 +99,12 @@
 {{>tiktok}}
 {{>footer}}
 <script src="/js/tiktokscript.js"></script>
+
+<style>
+    .home
+{
+  background-image:  url('/images/tiktokbanner.jpg');
+   
+
+}
+</style>
