--- a/views/downloaderViews/twitterDownloader.hbs
+++ b/views/downloaderViews/twitterDownloader.hbs
@@ -88,3 +88,11 @@
 {{>twitterAcrd}}
 {{>footer}}
 <script src="/js/twitterscript.js"></script>
+<style>
+    .home
+{
+  background-image:  url('/images/twitterbaner.webp');
+   
+
+}
+</style>
