--- a/views/sitemap.hbs
+++ b/views/sitemap.hbs
@@ -17,9 +17,43 @@
                         <td>{{@index}}</td>
                         <td><a href="/blogview/{{changeSpacesToDash this.title}}">{{this.title}}</a></td>
                         <td><a href="/blogview/{{changeSpacesToDash this.title}}">https://iluvnet.com/blogview/{{changeSpacesToDash this.title}}</a></td>
-
                     </tr>
                     {{/each}}
+                </tbody>
+            </table>
+        </section>
+         <section>
+            <h2>Other Pages</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>No</th>
+                        <th>Title</th>
+                        <th>Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td><a href="/downloader/instagram-video-downloader">Instagram Video Downloader</a></td>
+                        <td><a href="/downloader/instagram-video-downloader">https://iluvnet.com/blogview/downloader/instagram-video-downloader</a></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td><a href="/downloader/twitter-video-downloader">Twitter Video Downloader</a></td>
+                        <td><a href="/downloader/twitter-video-downloader">https://iluvnet.com/blogview/downloader/twitter-video-downloader</a></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td><a href="/downloader/tiktok-video-downloader">TikTok Video Downloader</a></td>
+                        <td><a href="/downloader/tiktok-video-downloader">https://iluvnet.com/blogview/downloader/tiktok-video-downloader</a></td>
+
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td><a href="/downloader/facebook-video-downloader">Facebook Video Downloader</a></td>
+                        <td><a href="/downloader/facebook-video-downloader">https://iluvnet.com/blogview/downloader/facebook-video-downloader</a></td>
+                    </tr>
                 </tbody>
             </table>
         </section>
