--- a/views/downloaderViews/instagramDownloader.hbs
+++ b/views/downloaderViews/instagramDownloader.hbs
@@ -116,3 +116,12 @@
 
 <script src="/js/script.js"></script>
 
+<style>
+  .home
+{
+  background-image:  url('/images/instabaner.jpg');
+   
+
+}
+
+</style>
