--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -16,25 +16,25 @@
                 </div>
             </header>
             <div class="post-content">
+                <p style="text-align: center;">Advertisement</p>
                 <div id="lazy-script2" style="display: flex; justify-content: center">
                     <script type="text/javascript">
-	atOptions = {
-		'key' : 'a20b0fb151c790196ccd0792f98bf72a',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script defer type="text/javascript" src="//www.topcreativeformat.com/a20b0fb151c790196ccd0792f98bf72a/invoke.js"></script>
+                        atOptions = {
+                            'key': 'a20b0fb151c790196ccd0792f98bf72a',
+                            'format': 'iframe',
+                            'height': 90,
+                            'width': 728,
+                            'params': {}
+                        };
+                    </script>
+                    <script defer type="text/javascript"
+                        src="//www.topcreativeformat.com/a20b0fb151c790196ccd0792f98bf72a/invoke.js"></script>
                 </div>
                 <p>{{blog.shortDescription}}</p>
 
                 <img src="{{blog.image}}" alt="{{blog.title}}">
-
                 {{#if blog.audio}}
                 <audio controls>
-
                     <source src="{{blog.audio}}" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
@@ -45,11 +45,14 @@
                 </blockquote>
 
                 <p>For more blog posts, please visit our page daily <a href="https://luvnet.com">luvnet.com</a>.</p>
+                <p style="text-align: center;">Advertisement</p>
+                <script async="async" data-cfasync="false"
+                    src="//pl23027482.profitablegatecpm.com/4b47eb8d3af7bbcaa573bb48cd6c17f7/invoke.js"></script>
+                <div id="container-4b47eb8d3af7bbcaa573bb48cd6c17f7"></div>
 
             </div>
         </article>
         <aside class="sidebar">
-    
             <h3>Related Posts</h3>
             <div class="related-posts">
                 {{#each relatedBlog}}
@@ -160,4 +163,8 @@
             font-size: 22px;
         }
     }
+
+.lazy-script2{
+    border: 1px solid #000000;
+}
 </style>
