--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -17,18 +17,18 @@
             </header>
             <div class="post-content">
                 <p style="text-align: center;">Advertisement</p>
+
                 <div id="lazy-script2" style="display: flex; justify-content: center">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'a20b0fb151c790196ccd0792f98bf72a',
-                            'format': 'iframe',
-                            'height': 90,
-                            'width': 728,
-                            'params': {}
-                        };
-                    </script>
-                    <script defer type="text/javascript"
-                        src="//www.topcreativeformat.com/a20b0fb151c790196ccd0792f98bf72a/invoke.js"></script>
+                               <script type="text/javascript">
+	atOptions = {
+		'key' : 'bd32f3227cd0a420e51115c9c3f3f12a',
+		'format' : 'iframe',
+		'height' : 250,
+		'width' : 300,
+		'params' : {}
+	};
+</script>
+<script defer type="text/javascript" src="//www.topcreativeformat.com/bd32f3227cd0a420e51115c9c3f3f12a/invoke.js"></script>
                 </div>
                 <p>{{blog.shortDescription}}</p>
 
