--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -34,6 +34,7 @@
                 <p>{{blog.shortDescription}}</p>
 
                 <img src="{{blog.image}}" alt="{{blog.title}}">
+                <p style="text-align: center; font-size: 12px; color: #666;">All images are copyright to their respective owners.</p>
                 {{#if blog.audio}}
                 <div class="audio"
                     style="display: flex; flex-direction: column; justify-content: center; align-items: center; ">
