--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -168,6 +168,9 @@
         h1 {
             font-size: 22px;
         }
+        h3{
+            font-size: 15px;
+        }
     }
 
     .lazy-script2 {
