--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -171,6 +171,9 @@
         h3{
             font-size: 15px;
         }
+        h2{
+            font-size: 15px;
+        }
     }
 
     .lazy-script2 {
