--- a/views/downloaderViews/facebookDownloader.hbs
+++ b/views/downloaderViews/facebookDownloader.hbs
@@ -19,6 +19,21 @@
     <div class="headline-one">
   <h1>Facebook Video , Videos and Post Downloader</h1>
   <p>ILuvNet.com supports all types of Facebook videos links</p>
+     <p style="text-align: center;">Advertisement</p>
+
+                <div id="lazy-script2" style="display: flex; justify-content: center">
+                    <script type="text/javascript">
+                        atOptions = {
+                            'key': 'bd32f3227cd0a420e51115c9c3f3f12a',
+                            'format': 'iframe',
+                            'height': 250,
+                            'width': 300,
+                            'params': {}
+                        };
+                    </script>
+                    <script defer type="text/javascript"
+                        src="//www.topcreativeformat.com/bd32f3227cd0a420e51115c9c3f3f12a/invoke.js"></script>
+                </div>
 </div>
 
 
@@ -74,7 +89,10 @@
 </button>
     </div>
     <div class="loading-bar">Loading</div>
- 
+ <p style="text-align: center;">Advertisement</p>
+                <script async="async" data-cfasync="false"
+                    src="//pl23027482.profitablegatecpm.com/4b47eb8d3af7bbcaa573bb48cd6c17f7/invoke.js"></script>
+                <div id="container-4b47eb8d3af7bbcaa573bb48cd6c17f7"></div>
 
   </div>
 
