--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -16,7 +16,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <li><a href="/downloader">Downloader</a></li>
-        <li><a href="/tools">PDF Tools</a></li>
+        <li><a href="/tools">Tools</a></li>
         <li><a href="/about">About</a></li>
       </ul>
     </nav>
