--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -1,119 +1,170 @@
-
 {{>nav}}
 <link rel="stylesheet" href="/style/tools.css">
-  <div class="page-container">
+<div class="page-container">
 
-
-    <h1 class="page-title">PDF Converter and TOOLS </h1>
-    <p class="page-title">Convert your documents to high-quality PDF files.</p>
-    <div class="card-container">
-      <div class="card card-design">
-        <div class="card-image">
-          <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709662/ok6cdbjpkgeekhnv8kwu.png" alt="Image to PDF">
-        </div>
-        <div class="card-content">
-          <h3 class="card-title">Image to PDF</h3>
-          <p class="card-description">Convert your images to high-quality PDF files.</p>
-          <a href="/tools/image-to-Pdf" class="card-btn">Convert</a>
-        </div>
+<h1 class="page-title">We have a lot of tools to help you.</h1>
+  <h2 class="page-title">PDF Converter and TOOLS </h2>
+  <p class="page-title">Convert your documents to high-quality PDF files.</p>
+  <div class="card-container">
+    <div class="card card-design">
+      <div class="card-image">
+        <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709662/ok6cdbjpkgeekhnv8kwu.png"
+          alt="Image to PDF">
       </div>
-
-      <div class="card card-design">
-        <div class="card-image">
-          <img src="https://www.locklizard.com/wp-content/uploads/2023/07/convert-pdf-word.png" alt="Word to PDF CONVERTER">
-        </div>
-        <div class="card-content">
-          <h3 class="card-title">Word to PDF</h3>
-          <p class="card-description">Convert your Word documents to secure PDF files.</p>
-          <a href="#" class="card-btn word-conv">Convert</a>
-        </div>
-      </div>
-
-        <div class="card card-design">
-        <div class="card-image">
-          <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709898/ytm3bcrao1gkffh62q15.png" alt="Word to PDF CONVERTER">
-        </div>
-        <div class="card-content">
-          <h3 class="card-title">Document Scanner</h3>
-          <p class="card-description">Scan Your Image and Make it Like a Clean PDF.</p>
-          <a href="/tools/camscanner-image-scanner" class="card-btn word-conv">Convert</a>
-        </div>
-      </div>
-
-      <div class="card card-design">
-        <div class="card-image">
-          <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709749/u7stb2qkqcvqfsc23woy.png" alt="PNG to PDF CONVERTER">
-        </div>
-        <div class="card-content">
-          <h3 class="card-title">PNG to PDF</h3>
-          <p class="card-description">Convert your PNG images to high-quality PDF files.</p>
-          <a href="/tools/image-to-Pdf" class="card-btn">Convert</a>
-        </div>
+      <div class="card-content">
+        <h3 class="card-title">Image to PDF</h3>
+        <p class="card-description">Convert your images to high-quality PDF files.</p>
+        <a href="/tools/image-to-Pdf" class="card-btn">Convert</a>
       </div>
     </div>
 
-    
+    <div class="card card-design">
+      <div class="card-image">
+        <img src="https://www.locklizard.com/wp-content/uploads/2023/07/convert-pdf-word.png"
+          alt="Word to PDF CONVERTER">
+      </div>
+      <div class="card-content">
+        <h3 class="card-title">Word to PDF</h3>
+        <p class="card-description">Convert your Word documents to secure PDF files.</p>
+        <a href="#" class="card-btn word-conv">Convert</a>
+      </div>
+    </div>
+
+    <div class="card card-design">
+      <div class="card-image">
+        <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709898/ytm3bcrao1gkffh62q15.png"
+          alt="Word to PDF CONVERTER">
+      </div>
+      <div class="card-content">
+        <h3 class="card-title">Document Scanner</h3>
+        <p class="card-description">Scan Your Image and Make it Like a Clean PDF.</p>
+        <a href="/tools/camscanner-image-scanner" class="card-btn word-conv">Convert</a>
+      </div>
+    </div>
+
+    <div class="card card-design">
+      <div class="card-image">
+        <img src="https://res.cloudinary.com/dvenrjxhh/image/upload/v1711709749/u7stb2qkqcvqfsc23woy.png"
+          alt="PNG to PDF CONVERTER">
+      </div>
+      <div class="card-content">
+        <h3 class="card-title">PNG to PDF</h3>
+        <p class="card-description">Convert your PNG images to high-quality PDF files.</p>
+        <a href="/tools/image-to-Pdf" class="card-btn">Convert</a>
+      </div>
+    </div>
+  </div>
+<h2 class="page-title"> SIP Calculator </h2>
+  <p class="page-title">Track Your Investment Journey.</p>
+  <div class="card-container">
+    <div class="card card-design">
+      <div class="card-image">
+        <img src="https://play-lh.googleusercontent.com/luOAuy1zATlHQv1JO10HpSQ3XgVLHBfqRkojusQRxThW_CRvTj8qvM5A-icIcguZbA"
+          alt="sip-calculator">
+      </div>
+      <div class="card-content">
+        <h3 class="card-title">SIP Calculator</h3>
+        <p class="card-description">Easly calculate your SIP </p>
+        <a href="/tools/sip-calculator" class="card-btn">Calculate Now</a>
+      </div>
+    </div>
+  </div>
 
 
-
- <div class="foobar-container">
+  <div class="foobar-container">
     <div class="foobar-card">
       <h2 class="foobar-heading">Image to PDF Conversion FAQs</h2>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">How to convert image to PDF?</h3>
-        <p class="foobar-faq-text">To <span class="foobar-highlight">convert image to PDF</span>, use online tools or desktop software. Most <span class="foobar-highlight">free PDF converters</span> allow uploading or dragging and dropping image files to <span class="foobar-highlight">create PDF files</span>.</p>
+        <p class="foobar-faq-text">To <span class="foobar-highlight">convert image to PDF</span>, use online tools or
+          desktop software. Most <span class="foobar-highlight">free PDF converters</span> allow uploading or dragging
+          and dropping image files to <span class="foobar-highlight">create PDF files</span>.</p>
       </div>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">Best website for image to PDF conversion?</h3>
-        <p class="foobar-faq-text">Popular websites for <span class="foobar-highlight">image to PDF conversion</span> include iluvnet.com, PDFCandy, SmallPDF, and ILovePDF. They offer user-friendly interfaces and reliable <span class="foobar-highlight">PDF creation</span> processes.</p>
+        <p class="foobar-faq-text">Popular websites for <span class="foobar-highlight">image to PDF conversion</span>
+          include iluvnet.com, PDFCandy, SmallPDF, and ILovePDF. They offer user-friendly interfaces and reliable <span
+            class="foobar-highlight">PDF creation</span> processes.</p>
       </div>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">Free image to PDF converters?</h3>
-        <p class="foobar-faq-text">Yes, many <span class="foobar-highlight">free online PDF converters</span> are available for <span class="foobar-highlight">converting images to PDF</span>. Basic conversions are typically free, but premium features or higher file size limits may require paid plans.</p>
+        <p class="foobar-faq-text">Yes, many <span class="foobar-highlight">free online PDF converters</span> are
+          available for <span class="foobar-highlight">converting images to PDF</span>. Basic conversions are typically
+          free, but premium features or higher file size limits may require paid plans.</p>
       </div>
       <div class="foobar-faq">
         <h3 class="foobar-faq-heading">Free PDF converter software?</h3>
-        <p class="foobar-faq-text">In addition to online tools, you can download and install <span class="foobar-highlight">free PDF converter software</span> like PDFescape, PDF24, and Foxit Reader. These allow <span class="foobar-highlight">creating PDF files</span> from various formats.</p>
+        <p class="foobar-faq-text">In addition to online tools, you can download and install <span
+            class="foobar-highlight">free PDF converter software</span> like PDFescape, PDF24, and Foxit Reader. These
+          allow <span class="foobar-highlight">creating PDF files</span> from various formats.</p>
 
-       <h2 class="foobar-heading">How to Convert PNG to PDF Online?</h2>
-        <p class="foobar-faq-text">The PNG to PDF converter free tool is the fastest way to convert PNG files to PDF format. The simple and easy-to-execute set of instructions enables you to convert PNG to PDF high-quality files.</p>
-        
+        <h2 class="foobar-heading">How to Convert PNG to PDF Online?</h2>
+        <p class="foobar-faq-text">The PNG to PDF converter free tool is the fastest way to convert PNG files to PDF
+          format. The simple and easy-to-execute set of instructions enables you to convert PNG to PDF high-quality
+          files.</p>
+
         <p class="foobar-faq-text">Drag & drop or upload the images by pressing the Upload button.</p>
         <p class="foobar-faq-text">Hit the Convert to PDF button.</p>
         <p class="foobar-faq-text">PNG to PDF converter will start the process.</p>
         <p class="foobar-faq-text">You will get a downloadable PDF file in a few seconds.</p>
 
         <h3 class="foobar-heading">Why Should You Use This Merge PNG to PDF Tool?</h3>
-        <p class="foobar-faq-text">The internet is flooded with PNG to PDF online tools that may help you merge PNG to PDF files. However, most of these utilities include restrictions and limitations that often cause issues for their users. However, that’s not the case with this PNG to PDF free tool. This utility is your ultimate partner in converting PNGs to PDF files. Here are a few unique features of this efficient turn PNG to PDF online facility.</p>
+        <p class="foobar-faq-text">The internet is flooded with PNG to PDF online tools that may help you merge PNG to
+          PDF files. However, most of these utilities include restrictions and limitations that often cause issues for
+          their users. However, that’s not the case with this PNG to PDF free tool. This utility is your ultimate
+          partner in converting PNGs to PDF files. Here are a few unique features of this efficient turn PNG to PDF
+          online facility.</p>
 
         <h4 class="foobar-heading">PNG to PDF Free Conversion</h4>
-        <p class="foobar-faq-text">The PNG to PDF utility on this platform is totally free. Users aren't required to follow any signup procedure or purchase a premium membership for merging PNGs to PDF files using this tool. Also, no installation is needed to get the assistance of this free online facility.</p>
+        <p class="foobar-faq-text">The PNG to PDF utility on this platform is totally free. Users aren't required to
+          follow any signup procedure or purchase a premium membership for merging PNGs to PDF files using this tool.
+          Also, no installation is needed to get the assistance of this free online facility.</p>
 
         <h4 class="foobar-heading">User-Friendly Interface</h4>
-        <p class="foobar-faq-text">Don’t have any experience of using web-based tools to convert PNG to PDF online? The super-friendly interface of this PNG to PDF converter online tool makes it no uphill task to combine images into PDF. The simple and clear instructions also allow you to effortlessly convert countless PNG files to portable document format files.</p>
+        <p class="foobar-faq-text">Don’t have any experience of using web-based tools to convert PNG to PDF online? The
+          super-friendly interface of this PNG to PDF converter online tool makes it no uphill task to combine images
+          into PDF. The simple and clear instructions also allow you to effortlessly convert countless PNG files to
+          portable document format files.</p>
 
         <h4 class="foobar-heading">Guaranteed File Protection</h4>
-        <p class="foobar-faq-text">Keeping your uploaded image secure and private is our utmost duty, and we take every possible step to ensure it. The advanced algorithms of this online PNG convert to PDF utility control any unauthorized attempt to access your uploaded images. Additionally, your uploaded pictures will be erased from PNG to PDF converter’s server as soon as processing is completed.</p>
+        <p class="foobar-faq-text">Keeping your uploaded image secure and private is our utmost duty, and we take every
+          possible step to ensure it. The advanced algorithms of this online PNG convert to PDF utility control any
+          unauthorized attempt to access your uploaded images. Additionally, your uploaded pictures will be erased from
+          PNG to PDF converter’s server as soon as processing is completed.</p>
 
         <h3 class="foobar-heading">What Is the Need to Convert from PNG to PDF File?</h3>
         <p class="foobar-faq-text">The primary reasons to change png to pdf are discussed below.</p>
 
         <h4 class="foobar-heading">Easy Sharing</h4>
-        <p class="foobar-faq-text">Sharing PDF files is much easier as compared to other file formats. Most online platforms only allow users to upload files in PDF or doc format. Therefore, uploading and sharing PNG files would be challenging in such scenarios. Online convert PNG to PDF makes file sharing smooth and easy through web-based mediums. Additionally, if you have plenty of pictures to share, combine PNG to PDF file will be the perfect option instead of sending them separately.</p>
+        <p class="foobar-faq-text">Sharing PDF files is much easier as compared to other file formats. Most online
+          platforms only allow users to upload files in PDF or doc format. Therefore, uploading and sharing PNG files
+          would be challenging in such scenarios. Online convert PNG to PDF makes file sharing smooth and easy through
+          web-based mediums. Additionally, if you have plenty of pictures to share, combine PNG to PDF file will be the
+          perfect option instead of sending them separately.</p>
 
         <h4 class="foobar-heading">Versatility</h4>
-        <p class="foobar-faq-text">PNG files are mostly preferred for storing and sharing transparent visual elements. However, this file format is unsuitable for keeping or sharing textual information. On the other hand, PDF is a rich format that supports all types of data, including visual, pictorial, and textual content. That’s why if you want to add information besides visual elements, convert from PNG to PDF immediately.</p>
+        <p class="foobar-faq-text">PNG files are mostly preferred for storing and sharing transparent visual elements.
+          However, this file format is unsuitable for keeping or sharing textual information. On the other hand, PDF is
+          a rich format that supports all types of data, including visual, pictorial, and textual content. That’s why if
+          you want to add information besides visual elements, convert from PNG to PDF immediately.</p>
 
         <h4 class="foobar-heading">More Compatible</h4>
-        <p class="foobar-faq-text">Unlike PNG format, PDF is a multisystem file format that doesn’t need any particular device or application to run it. Also, every digital device, including laptops, smartphones, and personal computers, supports the PDF file format. Furthermore, PDF works exquisitely on all operating systems, including Windows, Android, IOS, and Mac.</p>
+        <p class="foobar-faq-text">Unlike PNG format, PDF is a multisystem file format that doesn’t need any particular
+          device or application to run it. Also, every digital device, including laptops, smartphones, and personal
+          computers, supports the PDF file format. Furthermore, PDF works exquisitely on all operating systems,
+          including Windows, Android, IOS, and Mac.</p>
 
         <h4 class="foobar-heading">High Security</h4>
-        <p class="foobar-faq-text">PDF is the most secure file format for storing or sharing confidential information. In addition, this file format has a password protection feature that helps you ensure the secrecy of your content. Therefore, millions of people get their files convert from PNG to PDF for sharing content through web-based channels.</p>
+        <p class="foobar-faq-text">PDF is the most secure file format for storing or sharing confidential information.
+          In addition, this file format has a password protection feature that helps you ensure the secrecy of your
+          content. Therefore, millions of people get their files convert from PNG to PDF for sharing content through
+          web-based channels.</p>
 
         <h3 class="foobar-heading">FAQs</h3>
 
         <h4 class="foobar-heading">How Many Images Can I Convert to PDF from PNG Free?</h4>
-        <p class="foobar-faq-text">The online facility to change PNG to PDF doesn’t restrict its users from enjoying its free services. Unlimited images can be convert to PDF from PNG without facing any hurdles.</p>
+        <p class="foobar-faq-text">The online facility to change PNG to PDF doesn’t restrict its users from enjoying its
+          free services. Unlimited images can be convert to PDF from PNG without facing any hurdles.</p>
 
         <h4 class="foobar-heading">How to Convert PNG to PDF On Mobile?</h4>
         <p class="foobar-faq-text">Simply access this free PNG to PDF converter online from your smartphone.</p>
@@ -122,24 +173,26 @@
         <p class="foobar-faq-text">Get your desired PNG to PDF free conversion results.</p>
 
         <h4 class="foobar-heading">Is It Possible to Merge PNG to PDF Without Losing Quality?</h4>
-        <p class="foobar-faq-text">Yes! The web-based PNG to PDF tool doesn’t affect the quality or resolution of image files, while convert PNG to PDF free. Therefore, you will get the same quality of images after combining PNG to PDF files.</p>
+        <p class="foobar-faq-text">Yes! The web-based PNG to PDF tool doesn’t affect the quality or resolution of image
+          files, while convert PNG to PDF free. Therefore, you will get the same quality of images after combining PNG
+          to PDF files.</p>
 
 
 
-        
+
       </div>
     </div>
   </div>
 
-  </div>
+</div>
 
 
 
- 
+
 {{> footer }}
 
 
- 
+
 
 
 
@@ -161,16 +214,16 @@
           },
           body: JSON.stringify({})
         })
-        .then((response) => {
-          if (response.ok) {
-            window.location.href = 'https://link.upstox.com/rbQc';
-          } else {
-            console.error('Error clicking ad:', response);
-          }
-        })
-        .catch((error) => {
-          console.error('Error fetching ad click:', error);
-        });
+          .then((response) => {
+            if (response.ok) {
+              window.location.href = 'https://link.upstox.com/rbQc';
+            } else {
+              console.error('Error clicking ad:', response);
+            }
+          })
+          .catch((error) => {
+            console.error('Error fetching ad click:', error);
+          });
       });
     });
   }
@@ -192,12 +245,12 @@
     width: 500px;
     margin-left: auto;
     margin-right: auto;
-     margin-top: 20px;
+    margin-top: 20px;
     margin-bottom: 20px;
-}
+  }
 
-.ad-banner img {
+  .ad-banner img {
     width: 100%;
     height: auto;
-}
+  }
 </style>
