--- a/views/blogtwo.hbs
+++ b/views/blogtwo.hbs
@@ -1,8 +1,8 @@
 {{>nav}}
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/4.0.0-alpha.14/lib.min.js" integrity="sha512-LTxGQ9e0m5BLj8PqkTeZdQIWBCGt2L1I3dZkprWs3lwsWkiXD1j+o2rttG+40TVOQPUpQC9rykk3RPX9Dny1Bg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <header class="max-w-xl mx-auto mt-20 text-center">
     <h1 class="text-4xl">
         ILuvnet.com <span class="text-blue-500">Lattest Blogs</span>
