--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,7 +46,7 @@
     integrity="sha512-NQfB/bDaB8kaSXF8E77JjhHG5PM6XVRxvHzkZiwl3ddWCEPBa23T76MuWSwAJdMGJnmQqM0VeY9kFszsrBEFrQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined" rel="stylesheet">
-
+  
   <script async src="https://fundingchoicesmessages.google.com/i/pub-7820803685387750?ers=1"
     nonce="ZVG4vGoditoPyXbN-p3E8A"></script>
   <script
@@ -61,7 +61,7 @@
 
     gtag('config', 'G-37JXSQCELV');
   </script>
-<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+{{!-- <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
@@ -69,7 +69,7 @@
       appId: "3e021cfa-f533-416f-b6fc-09193b6b9189",
     });
   });
-</script>
+</script> --}}
 </head>
 
 <body>
