--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,7 +61,7 @@
 
     gtag('config', 'G-37JXSQCELV');
   </script>
-{{!-- <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
 <script>
   window.OneSignalDeferred = window.OneSignalDeferred || [];
   OneSignalDeferred.push(function(OneSignal) {
@@ -69,7 +69,7 @@
       appId: "3e021cfa-f533-416f-b6fc-09193b6b9189",
     });
   });
-</script> --}}
+</script>
 </head>
 
 <body>
