--- a/views/tools.hbs
+++ b/views/tools.hbs
@@ -1,10 +1,24 @@
 {{>nav}}
 <link rel="stylesheet" href="/style/tools.css">
 <div class="page-container">
+  <p style="text-align: center;">Advertisement</p>
 
-<h1 class="page-title">We have a lot of tools to help you.</h1>
-  <h2 class="page-title">PDF Converter and TOOLS </h2>
-  <p class="page-title">Convert your documents to high-quality PDF files.</p>
+  <div id="lazy-script2" style="display: flex; justify-content: center; margin-top: 20px margin-bottom: 20px">
+    <script type="text/javascript">
+      atOptions = {
+        'key': 'bd32f3227cd0a420e51115c9c3f3f12a',
+        'format': 'iframe',
+        'height': 250,
+        'width': 300,
+        'params': {}
+      };
+    </script>
+    <script defer type="text/javascript"
+      src="//www.topcreativeformat.com/bd32f3227cd0a420e51115c9c3f3f12a/invoke.js"></script>
+  </div>
+  <h1 style="padding: 1px; margin:1px" class="page-title">We have a lot of tools to help you.</h1>
+  <h2 style="padding: 1px; margin:1px" class="page-title">PDF Converter and TOOLS </h2>
+  <p style="padding: 1px; margin:1px" class="page-title">Convert your documents to high-quality PDF files.</p>
   <div class="card-container">
     <div class="card card-design">
       <div class="card-image">
@@ -54,22 +68,27 @@
       </div>
     </div>
   </div>
-<h2 class="page-title"> SIP Calculator </h2>
+  <h2 class="page-title"> SIP Calculator </h2>
   <p class="page-title">Track Your Investment Journey.</p>
   <div class="card-container">
     <div class="card card-design">
       <div class="card-image">
-        <img src="https://play-lh.googleusercontent.com/luOAuy1zATlHQv1JO10HpSQ3XgVLHBfqRkojusQRxThW_CRvTj8qvM5A-icIcguZbA"
+        <img
+          src="https://play-lh.googleusercontent.com/luOAuy1zATlHQv1JO10HpSQ3XgVLHBfqRkojusQRxThW_CRvTj8qvM5A-icIcguZbA"
           alt="sip-calculator">
       </div>
       <div class="card-content">
-        <h3 class="card-title">SIP Calculator</h3>
-        <p class="card-description">Easly calculate your SIP </p>
-        <a href="/tools/sip-calculator" class="card-btn">Calculate Now</a>
+        <h3 style="margin:1px" class="card-title">SIP Calculator</h3>
+        <p style="margin:1px" class="card-description">Easly calculate your SIP </p>
+        <a style="margin:1px" href="/tools/sip-calculator" class="card-btn">Calculate Now</a>
       </div>
     </div>
-  </div>
 
+  </div>
+  <p style="text-align: center;">Advertisement</p>
+  <script async="async" data-cfasync="false"
+    src="//pl23027482.profitablegatecpm.com/4b47eb8d3af7bbcaa573bb48cd6c17f7/invoke.js"></script>
+  <div id="container-4b47eb8d3af7bbcaa573bb48cd6c17f7"></div>
 
   <div class="foobar-container">
     <div class="foobar-card">
@@ -253,4 +272,25 @@
     width: 100%;
     height: auto;
   }
+
+  @media only screen and (max-width: 767px) {
+  h1 {
+    font-size: 12px; /* Adjust the font size as needed */
+  }
+  
+  h2 {
+    font-size: 10px; /* Adjust the font size as needed */
+  }
+  
+  h3 {
+    font-size: 9px; /* Adjust the font size as needed */
+  }
+  
+  h4 {
+    font-size: 8px; /* Adjust the font size as needed */
+  }
+}
+
+
+  
 </style>
