--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -98,5 +98,303 @@
 <script src="/js/imagetoPdf.js"></script>
 {{>footer}}
 
+<style>
+  
+section
+  {
+    padding: 40px 30px;
+  }
+.news
+{
+    text-align: center;
+}
+.news .titletext
+{
+    text-align: center;
+    font-size: 2em;
+    padding-bottom: 40px;
+}
+.news .titletext span
+{
+    color: var(--secondary);
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-block: 2rem;
+    gap: 2rem;
+    background: var(--bg);
+    border-radius: 20px;
+    padding: 50px 0px;
+  }
+  
+  img {
+    max-width: 100%;
+    object-fit: cover;
+  }
+  .blog :hover
+  {
+    color: blueviolet;
+    cursor: pointer;
+  }
 
 
+  .blog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: clamp(20rem, calc(20rem + 2vw), 22rem);
+    overflow: hidden;
+    box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
+    border-radius: 1em;
+    background: #fff;
+  }
+  
+  .blog__body {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+  }
+  
+  
+  .tag {
+    align-self: flex-start;
+    padding: .25em .75em;
+    border-radius: 1em;
+    font-size: .75rem;
+    background: var(--secondary);
+    color: #fff;
+  }
+  
+  .tag + .tag {
+    margin-left: .5em;
+  }
+  
+  .blog__body h4 {
+    font-size: 1.5rem;
+    text-transform: capitalize;
+  }
+  
+  .blog__footer {
+    display: flex;
+    padding: 1rem;
+    margin-top: auto;
+  }
+  
+  .user {
+    display: flex;
+    gap: .5rem;
+  }
+  
+  .user__image {
+    border-radius: 50%;
+  }
+  
+  .user__info > small {
+    color: #666;
+  }
+
+.events
+{
+    text-align: center;
+}
+.events .titletext
+{
+    text-align: center;
+    font-size: 2em;
+    padding-bottom: 40px;
+}
+.events .titletext span
+{
+    color: var(--secondary);
+}
+.jobs
+{
+    text-align: center;
+}
+.jobs .titletext
+{
+    text-align: center;
+    font-size: 2em;
+    padding-bottom: 40px;
+}
+.jobs .titletext span
+{
+    color: var(--secondary);
+}   
+.register
+{
+    text-align: center;
+    border-top: 1px solid var(--border);
+}
+.register .titletext
+{
+    text-align: center;
+    font-size: 2em;
+    padding-bottom: 40px;
+}
+.register .titletext span
+{
+    color: var(--secondary);
+}  
+.form
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    background: var(--secondary);
+    padding: 30px;
+    width: 700px;
+    margin: auto;
+    border-radius: 20px;
+    height: auto;
+}
+.form .formimg img
+{
+    width: 350px;
+    border-radius: 25px;
+}
+.form .formcontent
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+}
+.form .formcontent input
+{
+    border: none;
+    padding: 10px 30px;
+    border-radius: 20px;
+}
+.strip
+{
+    background: var(--secondary);
+    width: 100%;
+    height: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.strip h1
+{
+    color: #fff;
+    font-weight: 300;
+}
+.strip .icons a{
+    color: #fff;
+}
+.alert {
+    position: fixed;
+    top: 5%;
+    right: 2%;
+    background: var(--secondary);
+    color: #fff;
+    font-weight: 800;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    padding: 20px;
+    width: 300px;
+    height: 100vh;
+    border-radius: 10px;
+    transform: translateX(150%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 2;
+}
+.alert .navigation1
+{
+    display: flex;
+    flex-direction: column;
+    gap: 70px;
+    list-style: none;
+    text-align: center;
+}
+.alert .navigation1 li a
+{
+    text-decoration: none;
+    color: #fff;
+}
+.alert p {
+    margin: 30px;
+    letter-spacing: 1px;
+}
+
+.alert i {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 30px;
+    cursor: pointer;
+    color: #fff;
+}
+.register .form .btn
+{
+    margin-top: 10px;
+    border: none;
+    padding: 10px 30px;
+    background: #fff;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: .5s;
+}
+
+@media(max-width: 911px){
+  
+    .top .search .hamburger
+    {
+        display: block;
+    }   
+    .register .form
+    {
+        margin: 0 0;
+    }
+    swiper-slide .imgbx img {
+        height: 100vh;
+    }
+    .top .search{
+        display: flex;
+        justify-content: space-between;
+    }
+    .top
+    {
+        position: sticky;
+        top: 0;
+        z-index: 2;
+        background: #fff;
+        width: 100%;
+    }
+    .banner
+    {
+    margin: 0px 0px;   
+    }
+    .form
+    {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+</style>
+
+
+
+<script>
+
+  const blog = document.querySelectorAll('.blog')
+
+  blog.forEach((blog) => {
+    blog.addEventListener('click', () => {
+      const id = blog.getAttribute('data-id')
+       let query = id.replace(/-/g, '@').replace(/\?/g, 'qmark').replace(/ /g, '-')
+      window.location.href = `/blogview/${query}`
+    })
+  })
+
+
+</script>
