--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -70,6 +70,25 @@
     });
   });
 </script>
+///PUSHTWO
+<script>
+(function(w, d) {
+  w.PushEngage = w.PushEngage || [];
+  w._peq = w._peq || [];
+  PushEngage.push(['init', {
+      appId: '370f3a25-f868-4c95-8940-ff26a74b352a'
+  }]);
+
+  var e = d.createElement('script');
+
+  e.src = 'https://clientcdn.pushengage.com/sdks/pushengage-web-sdk.js';
+  e.async = true;
+  e.type = 'text/javascript';
+  d.head.appendChild(e);
+})(window, document);
+</script>
+
+
 </head>
 
 <body>
