--- a/views/imagetoPdf.hbs
+++ b/views/imagetoPdf.hbs
@@ -5,24 +5,9 @@
   <div class="home">
 
 
-    <div class="headline-one">
+    <div class="headline-one" style="margin-top: 25px margin-bottom: 25px">
       <h1>Image to PDF converter</h1>
       <p>Convert Your Images to PDF for Free</p>
-        <p style="text-align: center;">Advertisement</p>
-
-                <div id="lazy-script2" style="display: flex; justify-content: center; margin-top: 20px margin-bottom: 20px">
-                    <script type="text/javascript">
-                        atOptions = {
-                            'key': 'bd32f3227cd0a420e51115c9c3f3f12a',
-                            'format': 'iframe',
-                            'height': 250,
-                            'width': 300,
-                            'params': {}
-                        };
-                    </script>
-                    <script defer type="text/javascript"
-                        src="//www.topcreativeformat.com/bd32f3227cd0a420e51115c9c3f3f12a/invoke.js"></script>
-                </div>
     </div>
 
 
@@ -44,11 +29,6 @@
       </div>
     </div>
   </form>
-<p style="text-align: center;">Advertisement</p>
-                <script async="async" data-cfasync="false"
-                    src="//pl23027482.profitablegatecpm.com/4b47eb8d3af7bbcaa573bb48cd6c17f7/invoke.js"></script>
-                <div id="container-4b47eb8d3af7bbcaa573bb48cd6c17f7"></div>
-
     <div class="loading-bar"></div>
 
   </div>
