--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -18,6 +18,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/about">About</a></li>
           <li><a href="/services">Services</a></li>
+          <li><a href="/guest-blog-posting">Guest Blog</a></li>
           <li><a href="/contactus">Contact</a></li>
           <li><a href="/api">API</a></li>
         </ul>
