--- a/views/blogview.hbs
+++ b/views/blogview.hbs
@@ -5,7 +5,7 @@
             <header>
                 <h1 id="heading">{{blog.title}}</h1>
                 <div class="post-meta">
-                    <span class="author">By ILuvnet.com</span>
+                    <span class="author">By Afsal</span>
                     <span class="author"><i class="fa-solid fa-eye"></i> {{blog.views}}</span>
                     <span class="date"><i class="fa-solid fa-clock"></i> {{formatDate blog.date}}</span>
                     <div class="tags">
