--- a/views/ipogmp.hbs
+++ b/views/ipogmp.hbs
@@ -110,7 +110,7 @@ td {
 
   /* New rule to handle long IPO names */
   td:first-child {
-    width: 200px; /* Adjust this value as needed */
+    /* Adjust this value as needed */
     white-space: normal;
     word-wrap: break-word;
   }
