--- a/views/blogtwo.hbs
+++ b/views/blogtwo.hbs
@@ -78,7 +78,7 @@
                         <img src="/icons/android-icon-48x48.png" alt="Lary avatar">
                         <div class="ml-3">
                             <h5 class="font-bold">Iluvnet.com</h5>
-                            <h6>Written By Afsal</h6>
+                            <h6>Written By ILuvNet.com</h6>
                         </div>
                     </div>
 
@@ -134,7 +134,7 @@
                             <img src="/icons/android-icon-48x48.png" alt="Lary avatar">
                             <div class="ml-3">
                                 <h5 class="font-bold">Iluvnet.com</h5>
-                                <h6>Written By Afsal</h6>
+                                <h6>Written By ILuvNet.com</h6>
                             </div>
                         </div>
 
@@ -191,7 +191,7 @@
                             <img src="/icons/android-icon-48x48.png" alt="Lary avatar">
                             <div class="ml-3">
                                 <h5 class="font-bold">Iluvnet.com</h5>
-                                <h6>Written By Afsal</h6>
+                                <h6>Written By ILuvNet.com</h6>
                             </div>
                         </div>
 
@@ -250,7 +250,7 @@
                             <img src="/icons/android-icon-48x48.png" alt="avatar">
                             <div class="ml-3">
                                 <h5 class="font-bold">Iluvnet.com</h5>
-                                <h6>Written By Afsal</h6>
+                                <h6>Written By ILuvNet.com</h6>
                             </div>
                         </div>
 
